--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -159,8 +159,9 @@
 }
 
 .flexcontainer {
-  margin: 0 auto;
-  display: relative;
+  display: flex;
+  margin-left: 5em;
+  margin-right: 5em;
   text-align: center;
 }
 
@@ -169,6 +170,18 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  grid-column-gap: 10px;
+}
+
+.nonflex {
+  display: relative;
+  margin-left: 5em;
+  margin-right: 5em;
+  text-align: center;
+}
+
+.nonflex div {
+  width: 220px;
 }
 
 .flexrows {
@@ -181,21 +194,17 @@
 .flexitem {
   flex: 1;
   text-align: center;
+  margin: 0;
+  padding: 5px;
 }
 
-.flexbutton {
-  width: 220px;
-  padding: 10px;
-}
 
 #moviequote {
+  margin-top: 50px;
   color: var(--white);
-}
-
-.quoteblock {
-  height: 350px;
-  text-align: center;
+  display: inline-block;
   vertical-align: middle;
+  height: 200px;
 }
 
 #usermessage {
